--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,7 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Thu Jun 30 16:43:24 CST 2016
+SUPPORT_VERSION=24.0.0
 systemProp.https.proxyPort=1080
 systemProp.http.proxyHost=127.0.0.1
 org.gradle.jvmargs=-Xmx1536m
