--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     defaultConfig {
         applicationId "com.makedream.jawasi"
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
     }
@@ -27,7 +27,7 @@ android {
 dependencies {
     testCompile 'junit:junit:4.12'
     //debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3'
-    //compile 'com.facebook.stetho:stetho:1.2.0'
+    compile 'com.facebook.stetho:stetho:1.2.0'
     testCompile 'org.mockito:mockito-core:1.+'
     testCompile 'org.json:json:20140107'
     compile fileTree(dir: 'libs', include: ['*.jar'])
